# vse

./: .gitignore  CMakeLists.txt
al/: CMakeLists.txt
al/include/al/: ecs.hpp  gl.hpp  math.hpp
al/include/al/ecs/: component_manager.hpp  ecs.hpp  event_manager.hpp  system_manager.hpp
al/include/al/gl/: buffer.hpp  camera.hpp  input.hpp  program.hpp  shader.hpp  shapes.hpp  vao.hpp  window.hpp
al/include/al/math/: mat4.hpp  mat_utils.hpp  vec2.hpp
al/src/ecs/: ecs.cpp
al/src/gl/: camera.cpp  input.cpp  program.cpp  shader.cpp  shapes.cpp  window.cpp
al/src/math/: mat4.cpp  mat_utils.cpp  vec2.cpp
cmake/: FindGLFW.cmake
include/vse/: component_manager.hpp  ecs.hpp  mat4.hpp  mat_utils.hpp  program.hpp  shapes.hpp  vec2.hpp  window.hpp
sb/: CMakeLists.txt
sb/shaders/: basic.sf  basic.sv
sb/src/: behaviours.cpp  behaviours.hpp  main.cpp
sb/src/components/: CCollision.hpp  CModel.hpp  CTransform.hpp  model.hpp  transform.hpp
sb/src/systems/: CollisionDetectionSystem.cpp  CollisionDetectionSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  TransformationSystem.cpp  TransformationSystem.hpp
shaders/: basic.sv
src/: buffer.cpp  ecs.cpp  main.cpp  mat4.cpp  mat_utils.cpp  shader.cpp  shapes.cpp  system_manager.cpp  vao.cpp  vec2.cpp  window.cpp
